# later-lists

./: .gitignore  README.md  package.json
api/: Cargo.toml  README.md  watch.sh
api/migrations/2020-07-19-154801_create_todos/: up.sql
api/migrations/2020-07-23-132023_create_lists/: up.sql
api/src/: db.rs  errors.rs  main.rs  schema.rs
api/src/models/: helpers.rs  lists.rs  mod.rs  todo_item.rs  todos.rs
api/src/routes/: helpers.rs  lists.rs  mod.rs  todos.rs  ws.rs
frontend/: README.md  package.json  tsconfig.json
frontend/src/: index.html  index.ts  router.ts  settings.ts
frontend/src/Common/: DAO.ts
frontend/src/Components/: Modal.ts  Sidebar.ts  Sidebars.ts  TodoForm.ts  TodoItem.ts  TodoItemBuilder.ts  TodoList.ts  TodoListBuilder.ts
frontend/src/Components/Modals/: TodoForm.ts
frontend/src/Components/TodoItem/: Builder.ts  DAO.ts  Interface.ts
frontend/src/DAO/: Base.ts  TodoItem.ts  TodoList.ts
frontend/src/Models/: TodoItem.ts  TodoList.ts
frontend/src/Pages/: Socket.ts  Todos.ts
frontend/src/styles/: default.css  flex.scss  helpers.scss  main.scss  overrides.scss
src/: store.ts
src/Components/: TodoForm.ts  TodoItem.ts
src/Pages/: HomePage.ts
