[package]
name = "laster-list-api"
version = "0.1.0"
authors = ["Dan Stewart <danielandrewstewart@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
warp = "0.2"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
serde_json = "1.0"
futures = { version = "0.3", default-features = false }

[dependencies.mongodb]
version = "0.11.0"
