[package]
name = "laster-list-api"
version = "0.1.0"
authors = ["Dan Stewart <danielandrewstewart@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-trait = "0.1.7"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "1.4.6", features = ["postgres", "chrono", "uuid"] }
dotenv = "0.15.0"
futures = { version = "0.3", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "0.2", features = ["full"] }
uuid = { version = "0.6.5", features = ["serde", "v4"] }
warp = "0.2"
